--- a/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
@@ -20,6 +20,10 @@
 	trait_tec_twin_growth_desc:0 "§LTO DO§!"
 	TRAIT_TEC_TWIN_GROWTH_EFFECT:0 "Each time a pop of this species is generated, there is a §G15%§! chance of another pop being £mod_pop_growth_speed£ §GGenerated§!."
 
+	trait_tec_panspermic:0 "Panspermic Dispersion"
+	trait_tec_panspermic_desc:0 "§LAn anomalous biological development made this species generate a propagation effect when reproducing, manifesting their kind in far away regions or even entire celestial-grade distances, dispersing their genes and generating new life. The mysteries of life, unquestionable as always.§!"
+	TRAIT_TEC_PANSPERMIC_EFFECT:0 "Each time a pop of this species is generated, there is a §G25%§! chance of a close-by planet generating a $tec_loc_blocker$ that can be cleared, generating an §Yadditional§! $tec_loc_pop$."
+
 	trait_tec_positive_thoughts:0 "Positivist"
 	trait_tec_positive_thoughts_desc:0 "§LThis species is able to find a light amongst an infinite empty void, and a song amongst a cascade of emptiness, always keeping positivity abroad.§!"
 	TRAIT_TEC_POSITIVE_THOUGHTS_EFFECT:0 "Can gain §GBonus§! Happiness whenever something §YPositive§! happens to the empire"
@@ -1799,10 +1803,7 @@
  # /
 
  # --------------- Building
-	building_tec_biological_extractor:0 "Xenocyte Extractor"
-	building_tec_biological_extractor_plural:0 "Xenocyte Extractors"
-	building_tec_biological_extractor_desc:0 "TO DO"
-	building_tec_biological_extractor_desc_genocidal:0 "TO DO"
+
  # /
 # /
 
