--- a/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
+++ b/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
@@ -1099,33 +1099,109 @@ l_english:
 # ---------------------------------------------------------------
 # ASCENSION PATH SUBFEATURES
 # ---------------------------------------------------------------
+ # ------------------------------------------------- Biogenic
+	# Buildings
+		building_tec_biogenic_extractor:0 "Xenocyte Extractor"
+		building_tec_biogenic_extractor_plural:0 "Xenocyte Extractors"
+		building_tec_biogenic_extractor_desc:0 "High-tech installations where genetic material is extracted, studied and applied as highly efficient mutations to the population."
 
+		job_tec_xenotransplanted:0 "Xenotransplantation Subject"
+		job_tec_xenotransplanted_plural: "Xenotransplantation Subjects"
+		job_tec_xenotransplanted_desc:0 "These individuals are subject of genetic material harvesting processes, to collect and break up useful characteristic for a later refinement."
+		job_tec_xenotransplanted_effect_desc:0 "£job_tec_xenotransplanted£ $job_tec_xenotransplanted_plural$ TO DO"
+		mod_job_tec_xenotransplanted_add:0 "$job_tec_xenotransplanted$ Jobs"
+		mod_job_tec_xenotransplanted_per_pop:0 "§G+1§! $job_tec_xenotransplanted$ Job Per $VALUE$ Pops"
+		mod_job_tec_xenotransplanted_per_pop_short:0 "\n§G+1§! £mod_job_tec_xenotransplanted_add£ per $VALUE$ £pop£"
+
+		job_tec_xenotransplanted_drone:0 "Xenotransplantation Drone"
+		job_tec_xenotransplanted_drone_plural: "Xenotransplantation Drones"
+		job_tec_xenotransplanted_drone_desc:0 "These drones have the only purpose of serving as genetic material hosts and subject to harvesting processes, to collect and break up useful characteristic for a later refinement for the collective."
+		job_tec_xenotransplanted_drone_effect_desc:0 "£job_tec_xenotransplanted_drone£ $job_tec_xenotransplanted_drone_plural$ TO DO"
+		mod_job_tec_xenotransplanted_drone_add:0 "$job_tec_xenotransplanted_drone$ Jobs"
+		mod_job_tec_xenotransplanted_drone_per_pop:0 "§G+1§! $job_tec_xenotransplanted_drone$ Job Per $VALUE$ Pops"
+		mod_job_tec_xenotransplanted_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_xenotransplanted_drone_add£ per $VALUE$ £pop£"
+
+		job_tec_purge_xenoextracted:0 "Xenoextracted"
+		job_tec_purge_xenoextracted_plural: "Xenoextracted"
+		job_tec_purge_xenoextracted_desc:0 "These unfortunate organic beings are being broken down into basic biological material for obtaining proper unique and useful genetic characteristics and applications."
+		job_tec_purge_xenoextracted_effect_desc:0 "£job_tec_purge_xenoextracted£ $job_tec_purge_xenoextracted_plural$ TO DO"
+		mod_job_tec_purge_xenoextracted_add:0 "$job_tec_purge_xenoextracted$ Jobs"
+		mod_job_tec_purge_xenoextracted_per_pop:0 "§G+1§! $job_tec_purge_xenoextracted$ Job Per $VALUE$ Pops"
+		mod_job_tec_purge_xenoextracted_per_pop_short:0 "\n§G+1§! £mod_job_tec_purge_xenoextracted_add£ per $VALUE$ £pop£"
+
+		building_tec_biogenic_extractor_biohive:0 "Xenocyte Amalgamator"
+		building_tec_biogenic_extractor_biohive_plural:0 "Xenocyte Amalgamators"
+		building_tec_biogenic_extractor_biohive_desc:0 "Dedicated organs that extract and refine the genetic material from the subjects inside its pods, creating new genetic strains for the collective."
+	# /
+	# Traits
+		# Human + mammalian + fallback
+		sr_tec_xenocytes_generic:0 "Xenocytes"
+		sr_tec_xenocytes_generic_desc:0 "§E§H$sr_tec_xenocytes_generic$§! (£sr_tec_xenocytes£) are organic nano-genetic units loaded with information for developing or mutating specific organic qualities"
+		# Reptilian + avian
+		sr_tec_xenocytes_fixation:0 "Xenocytes"
+		sr_tec_xenocytes_fixation_desc:0 "$sr_tec_xenocytes_generic_desc$"
+		# Arthro + Molluscoid
+		sr_tec_xenocytes_chitin:0 "Xenocytes"
+		sr_tec_xenocytes_chitin_desc:0 "$sr_tec_xenocytes_generic_desc$"
+		# Lithoid
+		sr_tec_xenocytes_lithoid:0 "Lithoid Xenocytes"
+		sr_tec_xenocytes_lithoid_desc:0 "$sr_tec_xenocytes_generic_desc$"
+		# Fungoid + Plantoid
+		sr_tec_xenocytes_plantoid:0 "Plantoid Xenocytes"
+		sr_tec_xenocytes_plantoid_desc:0 "$sr_tec_xenocytes_generic_desc$"
+		# Necroid
+		sr_tec_xenocytes_necroid:0 "Necroid Xenocytes"
+		sr_tec_xenocytes_necroid_desc:0 "$sr_tec_xenocytes_generic_desc$"
+		# Aquatic
+		sr_tec_xenocytes_aquatic:0 "Aquatic Xenocytes"
+		sr_tec_xenocytes_aquatic_desc:0 "$sr_tec_xenocytes_generic_desc$"
+		# Toxoid
+		sr_tec_xenocytes_toxoid:0 "Toxoid Xenocytes"
+		sr_tec_xenocytes_toxoid_desc:0 "$sr_tec_xenocytes_generic_desc$"
+		# Gene perfection
+		sr_tec_xenocytes_perfected:0 "Perfected Xenocytes"
+		sr_tec_xenocytes_perfected_desc:0 "$sr_tec_xenocytes_generic_desc$"
+		# Psionic + Psychic
+		sr_tec_xenocytes_psionic:0 "Anomalous Xenocytes"
+		sr_tec_xenocytes_psionic_desc:0 "$sr_tec_xenocytes_generic_desc$"
+		# Replicant + Bioware
+		sr_tec_xenocytes_artificial:0 "Artificial Xenocytes"
+		sr_tec_xenocytes_artificial_desc:0 "$sr_tec_xenocytes_generic_desc$"
+	# /
+ # /
  # ------------------------------------------------- Replicants
-	tec_replicant_army:0 "Replicant Commando"
-	tec_replicant_army_plural:0 "Replicant Commandos"
-	tec_replicant_army_desc:0 "Specifically trained elites of replicants that use all their body capacities with specific cloaking, distortion and camouflage devices to unleash chaos on the enemy infrastructure."
+	# Armies
+		tec_replicant_army:0 "Replicant Commando"
+		tec_replicant_army_plural:0 "Replicant Commandos"
+		tec_replicant_army_desc:0 "Specifically trained elites of replicants that use all their body capacities with specific cloaking, distortion and camouflage devices to unleash chaos on the enemy infrastructure."
+	# /
  # /
  # ------------------------------------------------- Cyborgs
-	# Specific ap armies
-	tec_mech_army:0 "Mech Army"
-	tec_mech_army_plural:0 "Mech Armies"
-	tec_mech_army_desc:0 "Highly weaponized cyborgs with mechanized exoskeletons, being a whole unit of warfare devastation individually, and more so in group."
+	# Armies
+		# Specific ap armies
+		tec_mech_army:0 "Mech Army"
+		tec_mech_army_plural:0 "Mech Armies"
+		tec_mech_army_desc:0 "Highly weaponized cyborgs with mechanized exoskeletons, being a whole unit of warfare devastation individually, and more so in group."
+	# /
  # /
  # ------------------------------------------------- Biopsio
-	tec_biopsio_army:0 "Harmonic Zealot"
-	tec_biopsio_army_plural:0 "Harmonic Zealots"
-	tec_biopsio_army_desc:0 "Psionically augmented warriors who focus more on subduing the enemy on spirit and attrition rather than direct damage."
-
-	building_tec_biopsionic_convergence:0 "Shrine of Convergence"
-	building_tec_biopsionic_convergence_desc:0 "These structures serve as a pathway and cornerstone for the necessary psionic powers required for a ritual of convergence, and so a place of pilgrinage for this important event."
-	building_tec_biopsionic_allow_convergence:0 "This building allows the §YRitual of Convergence§! effect on this colony, and will produce extra £sr_zro£ §Yresources§! with each successful ritual."
+	# Army
+		tec_biopsio_army:0 "Harmonic Zealot"
+		tec_biopsio_army_plural:0 "Harmonic Zealots"
+		tec_biopsio_army_desc:0 "Psionically augmented warriors who focus more on subduing the enemy on spirit and attrition rather than direct damage."
+	# /
+	# Building
+		building_tec_biopsionic_convergence:0 "Shrine of Convergence"
+		building_tec_biopsionic_convergence_desc:0 "These structures serve as a pathway and cornerstone for the necessary psionic powers required for a ritual of convergence, and so a place of pilgrinage for this important event."
+		building_tec_biopsionic_allow_convergence:0 "This building allows the §YRitual of Convergence§! effect on this colony, and will produce extra £sr_zro£ §Yresources§! with each successful ritual."
+	# /
  # /
  # ------------------------------------------------- Cyberpsio
 	# Misc
-	mod_tec_entropy:0 "£sr_dark_matter£ Entropy"
-	mod_tec_entropy_desc:0 "Entropy is a relative measure of anomalous matter relocated from other dimensions to our own, unstabilizing the local flow of time and space due to the exotic chaotic physics involved"
-
-	# OLD Extractor
+		mod_tec_entropy:0 "£sr_dark_matter£ Entropy"
+		mod_tec_entropy_desc:0 "Entropy is a relative measure of anomalous matter relocated from other dimensions to our own, unstabilizing the local flow of time and space due to the exotic chaotic physics involved"
+	# /
+	# OLD Building
 		building_tec_cyberpsionic_extractor_1:0 "Dimensional Extractor"
 		building_tec_cyberpsionic_extractor_1_plural:0 "Dimensional Extractors"
 		building_tec_cyberpsionic_extractor_1_desc:0 "This structure, made of exotic and powerful materials, harness residual anomalous energy into refined dust that can be used for state of the art cybernetic and psionic creations."
