--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -90,6 +90,8 @@
 	tec_loc_trade_value: "£trade_value£ $TRADE_VALUE$"
 	tec_loc_trade: "$tec_loc_trade_value$"
 	tec_loc_trade_icon: "£trade_value£"
+	tec_loc_pop: "£pop£ Pop"
+	tec_loc_pops: "$tec_loc_pop$s"
 	tec_loc_pop_growth: "£mod_pop_growth_speed£ $MOD_POP_GROWTH_SPEED$"
 	tec_loc_pop_growth_icon: "£mod_pop_growth_speed£"
 	tec_loc_job_output: "£job£ Job Output"
