--- a/localisation/english/zz_evolved_traditions_l_english.yml
+++ b/localisation/english/zz_evolved_traditions_l_english.yml
@@ -730,37 +730,63 @@
 # --------------------------- ASCENSION T1 --------------------------------
  # Biogenic Mutation (B)
  # ------------------------------------------------------------
+	## 1, 2 > 3 vs 4 > 5 , 6 # Used by Biogenic
+		#####			#####
+		# 1	#			# 2	#
+		#####			#####
+			#####	#####
+			# 3	#	# 4	#
+			#####	#####
+		#####			#####
+		# 5	#			# 6	#
+		#####			#####
+	# /
 	tradition_tec_biogenic:0 "Mutation"
-	tradition_tec_biogenic_desc:0 "We have surpassed the limits natural biology imposed on our bodies, and now each single cell of our very selves are a tool to build our future."
+	tradition_tec_biogenic_desc:0 "We have surpassed the limits natural biology imposed on our bodies, and now every single cell of our very selves is a tool to build our future."
 
 	tr_tec_biogenic_adopt:0 "$tradition_tec_biogenic$ Traditions"
-	tr_tec_biogenic_adopt_tooltip:0 "Allows the construction of §H£building£ Xenotransplantation Chambers§!.\nUnlocks the §H£job_purge£ Xenoextraction§! purge type.\nBiological species can be harvested for $tec_loc_xenocytes$ and $tec_loc_society$ via £building£ Xenotransplantation Chambers or £job_purge£ Xenoextraction purge type.\n$tec_loc_xenocytes$ can be used to §YChange§! and §YUpgrade§! Mutagenic traits."
+	tr_tec_biogenic_adopt_tooltip:0 "Allows the construction of §H£building£ Xenotransplantation Chambers§!.\nUnlocks the §H£job_purge£ Xenoextraction§! purge type.\nBiological species can be harvested for $tec_loc_xenocytes$ and $tec_loc_society$ via £building£ Xenotransplantation Chambers or §Y£job_purge£ Xenoextraction§! purge type.\n$tec_loc_xenocytes$ can be used to §YChange§! and §YUpgrade§! Mutagenic traits."
 
 	tr_tec_biogenic_finish:0 "$tradition_tec_biogenic$ Traditions Finished"
 	tr_tec_biogenic_finish_tooltip:4 "TO DO.\n$TRADITIONS_FINISH_AP$"
 
 	tr_tec_biogenic_1:0 "Stemic Overdrive"
-	tr_tec_biogenic_1_delayed:0 "to do"
-	tr_tec_biogenic_1_tooltip:0 "Biological §Y$MOD_LEADER_AGE$§! increased by §G10§! years per §HOrganic Modification Point§!.\n£mod_pop_environment_tolerance£ §Y$tec_loc_habitability$§! increased by §G5%§! per §HOrganic Modification Point§!."	
+	tr_tec_biogenic_1_delayed:0 "Adaptation requires variety and proper genetic makeups for our species - the higher the availability of modifications we can have, the higher the chance of obtaining the best results possible."
+	tr_tec_biogenic_1_tooltip:0 "Biological §Y$MOD_LEADER_AGE$§! increased by §G5§! years per §HOrganic Modification Point§!.\n£mod_pop_environment_tolerance£ §Y$tec_loc_habitability$§! increased by §G5%§! per §HOrganic Modification Point§!."	
 
 	tr_tec_biogenic_2:0 "Cellular Manipulation"
-	tr_tec_biogenic_2_delayed:0 "to do"
+	tr_tec_biogenic_2_delayed:0 "Flesh is malleable, blood is mutable, organs are adaptable; cells can be used as building blocks, tailored to our will."
 	tr_tec_biogenic_2_tooltip:0 "Can §YAdd§! Negative traits to Organic Species.\nCan §YRemove§! beneficial traits from Organic Species.\nCan §YAlter§! Pop §YAppearance§! with Species Modification."
 
 	tr_tec_biogenic_3:0 "Directed Mutations"
 	tr_tec_biogenic_3_delayed:0 "Change can be focused towards our interests if we force the manifestation of adequate mutations, later scrubbing undesirable traits, or converting them into desirable ones."
-	tr_tec_biogenic_3_tooltip:0 "Unlocks Mutagenic Traits.\nMutagenic Traits are traits available for Biological Species which get adapted to the main Muta-Genus of the empire, and can be upgraded with $tec_loc_xenocytes$."
+	tr_tec_biogenic_3_tooltip:0 "Unlocks §YMutagenic Traits§!.\nMutagenic Traits are traits available for Biological Species that can be discovered and improved by harvesting §Y$tec_loc_xenocytes$§!."
+	# which get adapted to the main Muta-Genus of the empire, 
 
 	tr_tec_biogenic_4:0 "Biomatter Reclamation"
-	tr_tec_biogenic_4_delayed:0 "to do"
-	tr_tec_biogenic_4_tooltip:0 "Pops undergoing Xenotransplantation or Xenoextraction also produce extra §Y$tec_loc_organic_assembly$§! and §Y$tec_loc_unity$§!."
+	tr_tec_biogenic_4_delayed:0 "Nothing is left to waste, no one is useless for our plans - Whoever we use as patterns, test or elements of interest will serve our kind."
+	tr_tec_biogenic_4_tooltip:0 "Pops undergoing §Y£job_tec_xenotransplanted£ Xenotransplantation§! or §Y£job_purge£ Xenoextraction§! also produce extra §Y$tec_loc_organic_assembly$§! and §Y$tec_loc_society_research$§!."
 
-	tr_tec_biogenic_5:0 "TO DO"
-	tr_tec_biogenic_5_delayed:0 "to do"
-	tr_tec_biogenic_5_tooltip:0 "Harvested DNA from leviathans and Xenocytes obtained from different archetypes can be recombined with mutagenic traits, making them manifest additional bonuses when fully upgraded."
+	tr_tec_biogenic_5:0 "Primal Adaptation"
+	tr_tec_biogenic_5_delayed:0 "Survival of the fittest is conditioned by favorable traits and abilities which, in time, will be ours."
+	tr_tec_biogenic_5_tooltip:0 "Harvested DNA from §Y£job_purge£ Leviathans§! and §Y$tec_loc_xenocytes$§! obtained from different archetypes can be recombined with §YMutagenic traits§!, making some manifest additional bonuses when fully upgraded, or discover extra traits by cross-mutating the samples."
+
+	tr_tec_biogenic_6:0 "REPLACE_ME"
  # /
+
  # Bionic Integration (B)
  # ------------------------------------------------------------
+	### 1 > 2 vs 3 > 4 / 5 > 6 # Used by Bioware
+			 #####			#####
+		   # 1 #			# 5	#
+			 #####			#####
+		#####	#####
+		# 2	#	# 3	#
+		#####	#####
+			 #####			#####
+		 	 # 4 #			# 6	#
+		 	 #####			#####
+	# /
 	tradition_tec_bioware:0 "Bionic Integration"
 	tradition_tec_bioware_desc:0 "TO DO"
 
@@ -769,12 +795,28 @@
 
 	tr_tec_bioware_finish:0 "$tradition_tec_bioware$ Traditions Finished"
 	tr_tec_bioware_finish_tooltip:4 "TO DO.\n$TRADITIONS_FINISH_AP$"
+
+	tr_tec_bioware_1:0 "REPLACE_ME"
+	tr_tec_bioware_2:0 "REPLACE_ME"
+	tr_tec_bioware_3:0 "REPLACE_ME"
+	tr_tec_bioware_4:0 "REPLACE_ME"
+	tr_tec_bioware_5:0 "REPLACE_ME"
+	tr_tec_bioware_6:0 "REPLACE_ME"
  # /
+
  # Psychic Prowess (B)
  # ------------------------------------------------------------
-	#				3 < 1 > 2
-	#				 4a		4B
-	#				  	5 
+	### 1 to 2 and 3 > 4 vs 5 > 6 # Used by Psychic
+	#####	#####	#####
+	# 2	#	< 1	>	# 3	#
+	#####	#####	#####
+		##### v #####
+		# 4	#	  # 5	#
+		##### v #####
+				#####
+				# 6	#
+				#####
+	# /
 	tradition_tec_psychic:0 "Psychic Prowess"
 	tradition_tec_psychic_desc:0 "Our mind is our foundation, whose pillars are constituted in our will - We are many, but we are one, we don't need external forces but our sheer mental power to guide us."
 
@@ -806,6 +848,8 @@
 	tr_tec_psychic_3_hivemind_delayed:0 "to do"
 	tr_tec_psychic_3_hivemind_tooltip:0 "TO DO"
 
+	tr_tec_psychic_4:0 "REPLACE_ME"
+
 	tr_tec_psychic_4A:0 "Gazing into the Abyss"
 	tr_tec_psychic_4A_delayed:0 "to do"
 	tr_tec_psychic_4A_tooltip:0 "TO DO"
@@ -826,7 +870,7 @@
 	tr_tec_psychic_5_delayed:0 "to do"
 	tr_tec_psychic_5_tooltip:0 "TO DO"
 
-		tr_tec_psychic_5A:0 "Event Horizon"
+		tr_tec_psychic_5A:0 "Dark Side of the Mind"
 		tr_tec_psychic_5A_delayed:0 "to do"
 		tr_tec_psychic_5A_tooltip:0 "TO DO"
 
@@ -842,6 +886,8 @@
 		tr_tec_psychic_5B_hivemind_delayed:0 "to do"
 		tr_tec_psychic_5B_hivemind_tooltip:0 "TO DO"
 
+	tr_tec_psychic_6:0 "REPLACE_ME"
+
 	# Neut rituals
 		# Manifestation of Nature - Creates a space storm on each system with a Psychic relay built on a starbase
 		# Manifestation of A - A
@@ -855,6 +901,21 @@
 		# Manifestation of Sorrow	- 
 		# Manifestation of Fury		- Gives massive fleet bonuses for a time at expense of defensive capacities
 		# Manifestation of Dread	- 
+ # /
+ # Ethereals (C)
+ # ------------------------------------------------------------
+	#				3 < 1 > 2
+	#				 4a		4B
+	#				  	5
+	tr_tec_ethereal_adopt:0 "REPLACE_ME"
+	tr_tec_ethereal_finish:0 "REPLACE_ME"
+	tr_tec_ethereal_finish_tooltip:0 "REPLACE_ME"
+	tr_tec_ethereal_1:0 "REPLACE_ME"
+	tr_tec_ethereal_2:0 "REPLACE_ME"
+	tr_tec_ethereal_3:0 "REPLACE_ME"
+	tr_tec_ethereal_4:0 "REPLACE_ME"
+	tr_tec_ethereal_5:0 "REPLACE_ME"
+	tr_tec_ethereal_6:0 "REPLACE_ME"
  # /
 # /
 
