--- a/localisation/english/replace/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_l_english.yml
@@ -8,10 +8,16 @@
 
 # Tradition Requirements
 # ------------------------------------------------------------
-	tr_tec_synthetics_path_unlocked: "$TRIGGER_FAIL$Requires having finished the £stability£ §Y$situation_tec_synth_path_t1$§! situation."
-	tr_tec_psionics_path_unlocked: "$TRIGGER_FAIL$Requires having finished the £stability£ §Y$situation_tec_psionic_path_t1$§! situation."
-	tr_tec_genetics_path_unlocked: "$TRIGGER_FAIL$Requires having finished the £stability£ §Y$situation_tec_gene_path_t1$§! situation."
-	tr_tec_cybernetics_path_unlocked: "$TRIGGER_FAIL$Requires having finished the £stability£ §Y$situation_tec_cybernetic_path_t1$§! situation."
+	tr_tec_synthetics_path_unlocked: "$TRIGGER_FAIL$Requires having finished the £stability£ §Y$situation_tec_synth_path_t1$§! situation, with the appropriate options picked."
+	tr_tec_psionics_path_unlocked: "$TRIGGER_FAIL$Requires having finished the £stability£ §Y$situation_tec_psionic_path_t1$§! situation, with the appropriate options picked."
+	tr_tec_genetics_path_unlocked: "$TRIGGER_FAIL$Requires having finished the £stability£ §Y$situation_tec_gene_path_t1$§! situation, with the appropriate options picked."
+	tr_tec_cybernetics_path_unlocked: "$TRIGGER_FAIL$Requires having finished the £stability£ §Y$situation_tec_cybernetic_path_t1$§! situation, with the appropriate options picked."
+
+	tr_tec_biogenic_path_unlocked: "$TRIGGER_FAIL$Requires having finished the £stability£ §Y$situation_tec_gene_path_t1$§! situation."
+	tr_tec_bioware_path_unlocked: "$TRIGGER_FAIL$Requires having finished the £stability£ §Y$situation_tec_cybernetic_path_t1$§! situation, with the appropriate options picked."
+	tr_tec_ethereal_path_unlocked: "$TRIGGER_FAIL$Requires having finished the £stability£ §Y$situation_tec_psionic_path_t1$§! situation, with the appropriate options picked."
+	tr_tec_psychic_path_unlocked: "$TRIGGER_FAIL$Requires having finished the £stability£ §Y$situation_tec_psionic_path_t1$§! situation, with the appropriate options picked."
+
 
 # AP requirements and prerequisites
 # ------------------------------------------------------------
