--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -101,6 +101,8 @@
 
 	tec_loc_building_slots: "$planet_automation_building_slot$"
 
+	tec_loc_edict:0 "£edict£ Edict"
+	tec_loc_edicts:0 "£edict£ Edicts"
 	tec_loc_edict_funds_icon:0 "£mod_country_edict_fund_add£"
 	tec_loc_edict_funds:0 "$tec_loc_edict_funds_icon$  $MOD_COUNTRY_EDICT_FUND_ADD$"
 	tec_loc_naval_cap: "£mod_country_naval_cap_add£ $MOD_COUNTRY_NAVAL_CAP_ADD$"
