--- a/localisation/english/zz_evolved_traditions_l_english.yml
+++ b/localisation/english/zz_evolved_traditions_l_english.yml
@@ -735,7 +735,7 @@
 		# 1	#			# 2	#
 		#####			#####
 			#####	#####
-			# 3	#	# 4	#
+			# 3A#	# 3B#
 			#####	#####
 		#####			#####
 		# 5	#			# 6	#
@@ -750,26 +750,41 @@
 	tr_tec_biogenic_finish:0 "$tradition_tec_biogenic$ Traditions Finished"
 	tr_tec_biogenic_finish_tooltip:4 "TO DO.\n$TRADITIONS_FINISH_AP$"
 
-	tr_tec_biogenic_1:0 "Stemic Overdrive"
-	tr_tec_biogenic_1_delayed:0 "Adaptation requires variety and proper genetic makeups for our species - the higher the availability of modifications we can have, the higher the chance of obtaining the best results possible."
-	tr_tec_biogenic_1_tooltip:0 "Biological §Y$MOD_LEADER_AGE$§! increased by §G5§! years per §HOrganic Modification Point§!.\n£mod_pop_environment_tolerance£ §Y$tec_loc_habitability$§! increased by §G5%§! per §HOrganic Modification Point§!."	
+	tr_tec_biogenic_1:0 "Directed Mutations"
+	tr_tec_biogenic_1_delayed:0 "Change can be focused towards our interests if we force the manifestation of adequate mutations, later scrubbing undesirable traits, or converting them into desirable ones."
+	tr_tec_biogenic_1_tooltip:0 "Unlocks §YMutagenic Traits§!.\nMutagenic Traits are traits available for Biological Species that can be discovered and improved by harvesting §Y$tec_loc_xenocytes$§!."
+	# which get adapted to the main Muta-Genus of the empire
 
 	tr_tec_biogenic_2:0 "Cellular Manipulation"
 	tr_tec_biogenic_2_delayed:0 "Flesh is malleable, blood is mutable, organs are adaptable; cells can be used as building blocks, tailored to our will."
 	tr_tec_biogenic_2_tooltip:0 "Can §YAdd§! Negative traits to Organic Species.\nCan §YRemove§! beneficial traits from Organic Species.\nCan §YAlter§! Pop §YAppearance§! with Species Modification."
 
-	tr_tec_biogenic_3:0 "Directed Mutations"
-	tr_tec_biogenic_3_delayed:0 "Change can be focused towards our interests if we force the manifestation of adequate mutations, later scrubbing undesirable traits, or converting them into desirable ones."
-	tr_tec_biogenic_3_tooltip:0 "Unlocks §YMutagenic Traits§!.\nMutagenic Traits are traits available for Biological Species that can be discovered and improved by harvesting §Y$tec_loc_xenocytes$§!."
-	# which get adapted to the main Muta-Genus of the empire, 
+	# Elections
+		tr_tec_biogenic_3:0 "Primal Adaptation"
+		tr_tec_biogenic_3_delayed:0 "Survival of the fittest is conditioned by favorable traits and abilities which, in time, will be ours."
+		tr_tec_biogenic_3_tooltip:0 "Harvested DNA from §Y£job_purge£ Leviathans§! and §Y$tec_loc_xenocytes$§! obtained from different archetypes can be recombined with §YMutagenic traits§!, making some manifest additional bonuses when fully upgraded, or discover extra traits by cross-mutating the samples via $tec_loc_edict$."
 
-	tr_tec_biogenic_4:0 "Biomatter Reclamation"
-	tr_tec_biogenic_4_delayed:0 "Nothing is left to waste, no one is useless for our plans - Whoever we use as patterns, test or elements of interest will serve our kind."
-	tr_tec_biogenic_4_tooltip:0 "Pops undergoing §Y£job_tec_xenotransplanted£ Xenotransplantation§! or §Y£job_purge£ Xenoextraction§! also produce extra §Y$tec_loc_organic_assembly$§! and §Y$tec_loc_society_research$§!."
+		tr_tec_biogenic_3_disabled:0 "Primal Adaptation"
+		tr_tec_biogenic_3_disabled_delayed:0 "Survival of the fittest is conditioned by favorable traits and abilities which, in time, will be ours."
+		tr_tec_biogenic_3_disabled_tooltip:0 "$tec_tradition_swap_disabled$\n$tr_tec_biogenic_3_tooltip$"
 
-	tr_tec_biogenic_5:0 "Primal Adaptation"
-	tr_tec_biogenic_5_delayed:0 "Survival of the fittest is conditioned by favorable traits and abilities which, in time, will be ours."
-	tr_tec_biogenic_5_tooltip:0 "Harvested DNA from §Y£job_purge£ Leviathans§! and §Y$tec_loc_xenocytes$§! obtained from different archetypes can be recombined with §YMutagenic traits§!, making some manifest additional bonuses when fully upgraded, or discover extra traits by cross-mutating the samples."
+		tr_tec_biogenic_4:0 "Forced Evolution"
+		tr_tec_biogenic_4_delayed:0 "Our own genome will evolve way faster than even our knowledge to alter it, our capacities will grow further and further without stop."
+		tr_tec_biogenic_4_tooltip:0 "§YMutagenic traits§! will mutate naturally over time, manifesting additional bonuses or penalties. The chance of a trait mutating depends on the amount of §Y$tec_loc_xenocytes$§!."
+
+		tr_tec_biogenic_4_disabled:0 "Forced Evolution"
+		tr_tec_biogenic_4_disabled_delayed:0 "Our own genome will evolve way faster than even our knowledge to alter it, our capacities will grow further and further without stop."
+		tr_tec_biogenic_4_disabled_tooltip:0 "$tec_tradition_swap_disabled$\n$tr_tec_biogenic_4_tooltip$"
+
+
+	tr_tec_biogenic_5:0 "Stemic Overdrive"
+	tr_tec_biogenic_5_delayed:0 "Adaptation requires variety and proper genetic makeups for our species - the higher the availability of modifications we can have, the higher the chance of obtaining the best results possible."
+	tr_tec_biogenic_5_tooltip:0 "Biological §Y$MOD_LEADER_AGE$§! increased by §G5§! years per §HOrganic Modification Point§!.\n£mod_pop_environment_tolerance£ §Y$tec_loc_habitability$§! increased by §G5%§! per §HOrganic Modification Point§!."	
+
+	tr_tec_biogenic_6:0 "Biomatter Reclamation"
+	tr_tec_biogenic_6_delayed:0 "Nothing is left to waste, no one is useless for our plans - Whoever we use as patterns, test or elements of interest will serve our kind."
+	tr_tec_biogenic_6_tooltip:0 "Pops undergoing §Y£job_tec_xenotransplanted£ Xenotransplantation§! or §Y£job_purge£ Xenoextraction§! also produce extra §Y$tec_loc_organic_assembly$§! and §Y$tec_loc_society_research$§!."
+
 
 	tr_tec_biogenic_6:0 "REPLACE_ME"
  # /
@@ -778,13 +793,13 @@
  # ------------------------------------------------------------
 	### 1 > 2 vs 3 > 4 / 5 > 6 # Used by Bioware
 			 #####			#####
-		   # 1 #			# 5	#
+		   # 1 #			# 4	#
 			 #####			#####
 		#####	#####
-		# 2	#	# 3	#
+		# 2A	#	2B#
 		#####	#####
 			 #####			#####
-		 	 # 4 #			# 6	#
+		 	 # 3 #			# 5	#
 		 	 #####			#####
 	# /
 	tradition_tec_bioware:0 "Bionic Integration"
@@ -811,10 +826,10 @@
 	# 2	#	< 1	>	# 3	#
 	#####	#####	#####
 		##### v #####
-		# 4	#	  # 5	#
+		# 4A#	  # 4B#
 		##### v #####
 				#####
-				# 6	#
+				# 5	#
 				#####
 	# /
 	tradition_tec_psychic:0 "Psychic Prowess"
