netrunners change + preparing entities and art

--- a/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
+++ b/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
@@ -180,9 +180,75 @@ l_english:
 	district_tec_arcology_wonders_precursor_desc:0 "aaa"
  # /
  # ------------------------------------------------- Machine World
+	# Situation
+		situation_tec_machine_world_base:0 "[target.GetName] Mechanization"
+		situation_tec_machine_world_base_type:0 "$situation_tec_machine_world_base$"
+		situation_tec_machine_world_base_desc:0 "The psionic powers of the [owner_main_species.GetName] are waiting an awakening, and we have the key for it. Our most gifted researchers and psychics are intensively working on a way to unlock our psionic potential, §Yno matter what cost we have to pay§!."
+		situation_tec_machine_world_base_machine:0 "TO DO"
+		situation_tec_machine_world_base_assimilator:0 "TO DO"
+		situation_tec_machine_world_base_servitor:0 "TO DO"
+		situation_tec_machine_world_base_cyborg:0 "TO DO"
+		situation_tec_machine_world_base_synth:0 "TO DO"
+		situation_tec_machine_world_base_cyberhive:0 "TO DO"
+		situation_tec_machine_world_base_fail_tooltip:0 "It is impossible for us to fail...Or is it?"
+
+		situation_tec_machine_world_base_end_tooltip_standard:0 "[target.GetName] will be completely Mechanized and gain special $tec_loc_districts$ and Features."
+		situation_tec_machine_world_base_end_tooltip_machine:0 "[target.GetName] will be completely Mechanized and gain special $tec_loc_districts$ and Features."
+		situation_tec_machine_world_base_end_tooltip_assimilator:0 "[target.GetName] will be completely Mechanized and gain special $tec_loc_districts$ and Features."
+		situation_tec_machine_world_base_end_tooltip_servitor:0 "[target.GetName] will be completely Mechanized and gain special $tec_loc_districts$ and Features."
+		situation_tec_machine_world_base_end_tooltip_cyborg:0 "[target.GetName] will be completely Mechanized and gain special $tec_loc_districts$ and Features."
+		situation_tec_machine_world_base_end_tooltip_synth:0 "[target.GetName] will be completely Mechanized and gain special $tec_loc_districts$ and Features."
+		situation_tec_machine_world_base_end_tooltip_cyberhive:0 "[target.GetName] will be completely Mechanized and gain special $tec_loc_districts$ and Features."
+
+		situation_tec_machine_world_base_monthly_change_tooltip:0 "The progress of this §YSituation§! depend on our §HApproach§Y, §H$tec_loc_terraform_speed$§! and potential §HSide-events§! appearing during the situation."
+		situation_tec_machine_world_base_stage_0:0 "0"
+		situation_tec_machine_world_base_stage_1:0 "I"
+		situation_tec_machine_world_base_stage_2:0 "II"
+		situation_tec_machine_world_base_stage_3:0 "III"
+		situation_tec_machine_world_base_stage_4:0 "IV"
+		situation_tec_machine_world_base_stage_5:0 "V"
+		situation_tec_machine_world_base_stage_minus_1:0 "I"
+		situation_tec_machine_world_base_stage_minus_2:0 "II"
+		situation_tec_machine_world_base_stage_minus_3:0 "III"
+		situation_tec_machine_world_base_stage_minus_4:0 "IV"
+
+		situation_tec_machine_world_base_approach_slow:0 "Stagnated Mechanization"
+		situation_tec_machine_world_base_approach_slow_tooltip:0 "TO DO."
+
+		situation_tec_machine_world_base_approach_normal:0 "Standard Mechanization"
+		situation_tec_machine_world_base_approach_normal_tooltip:0 "TO DO."
+
+		situation_tec_machine_world_base_approach_fast:0 "Accelerated Mechanization"
+		situation_tec_machine_world_base_approach_fast_tooltip:0 "TO DO."
+	# /
+	# Modifiers
+		pm_tec_machine_world_stage_1:0 "Early Mechanization"
+		pm_tec_machine_world_stage_1_desc:0 "§EThis world is suffering a relentless industrial and mechanical transformation, with entire continents being reformed into endless industries, assembly and utility lines.§!"
+		pm_tec_machine_world_stage_2:0 "Initial Mechanization"
+		pm_tec_machine_world_stage_2_desc:0 "$pm_tec_machine_world_stage_1_desc$"
+		pm_tec_machine_world_stage_3:0 "Partial Mechanization"
+		pm_tec_machine_world_stage_3_desc:0 "$pm_tec_machine_world_stage_1_desc$"
+		pm_tec_machine_world_stage_4:0 "Advanced Mechanization"
+		pm_tec_machine_world_stage_4_desc:0 "$pm_tec_machine_world_stage_1_desc$"
+
+		pm_tec_machine_world_full:0 "Mechanized World"
+		pm_tec_machine_world_full_desc:0 "§EThis world's surface is entirely covered by industries, assembly and utility lines, forming a semi-autonomous planetary-wide relentless machine.§!"
+		pm_tec_machine_world_computing:0 "Mechanized Computer"
+		pm_tec_machine_world_computing_desc:0 "§EThis world's surface is entirely covered by computing towers, terminals and refrigeration units, forming a semi-autonomous planetary-wide relentless computer.§!"
+		pm_tec_machine_world_autofabricator:0 "Mechanized Fabricator"
+		pm_tec_machine_world_autofabricator_desc:0 "§EThis world's surface is entirely covered by production and fabrication lines, converting materials into straight up formed elements at a global scale in a semi-autonomous planetary-wide relentless fabrication unit.§!"
+	# /
+	# Notifications
+		TOAST_TEC_MACHINE_WORLD_STAGE_2_TITLE: "Mechanization Started"
+		TOAST_TEC_MACHINE_WORLD_STAGE_2_DESC: "[root.target.GetName] now allows £district£ Special Districts"
+		TOAST_TEC_MACHINE_WORLD_STAGE_3_TITLE: "Mechanization Progresses"
+		TOAST_TEC_MACHINE_WORLD_STAGE_3_DESC: "The mechanization of [root.target.GetName] continues"
+		TOAST_TEC_MACHINE_WORLD_STAGE_4_TITLE: "Mechanization Advances"
+		TOAST_TEC_MACHINE_WORLD_STAGE_4_DESC: "[root.target.GetName] now allows £district£ Mechanized Districts"
+		TOAST_TEC_MACHINE_WORLD_STAGE_5_TITLE: "Mechanization Ending"
+		TOAST_TEC_MACHINE_WORLD_STAGE_5_DESC: "The mechanization of [root.target.GetName] is near total completion."
+	# /
 	# Regular
-
-
 			job_tec_machine_technician:0 "Dynamo Controller"
 			job_tec_machine_technician_plural:0 "Dynamo Controller"
 			job_tec_machine_technician_desc:0 "The immense energy dynamos across the planet require constant supervision and maintenance."
@@ -286,20 +352,32 @@ l_english:
 
 	# /
 	# Modifiers
-		pm_tec_hiveworld_newborn:0 "A"
-		pm_tec_hiveworld_newborn_desc:0 "§EA.§!"
+		pm_tec_hive_world_start:0 "REPLACE_ME"
+		pm_tec_hive_world_half:0 "REPLACE_ME"
+		pm_tec_hive_world_full:0 "REPLACE_ME"
 
-		pm_tec_hiveworld_young:0 "A"
-		pm_tec_hiveworld_young_desc:0 "§EA.§!"
+		pm_tec_hive_world_nascent:0 "A"
+		pm_tec_hive_world_nascent_desc:0 "§EA.§!"
 
-		pm_tec_hiveworld_mature:0 "A"
-		pm_tec_hiveworld_mature_desc:0 "§EA.§!"
+		pm_tec_hive_world_young:0 "A"
+		pm_tec_hive_world_young_desc:0 "§EA.§!"
 
-		pm_tec_hiveworld_venerable:0 "A"
-		pm_tec_hiveworld_venerable_desc:0 "§EA.§!"
+		pm_tec_hive_world_mature:0 "A"
+		pm_tec_hive_world_mature_desc:0 "§EA.§!"
 
-		pm_tec_hiveworld_ancient:0 "A"
-		pm_tec_hiveworld_ancient_desc:0 "§EA.§!"
+		pm_tec_hive_world_elder:0 "A"
+		pm_tec_hive_world_elder_desc:0 "§EA.§!"
+	# /
+	# Notifications
+		TOAST_TEC_HIVE_WORLD_STAGE_2_TITLE: "Infestation Started"
+		TOAST_TEC_HIVE_WORLD_STAGE_2_DESC: "The infestation of [root.target.GetName] has started"
+		TOAST_TEC_HIVE_WORLD_STAGE_3_TITLE: "Infestation Progresses"
+		TOAST_TEC_HIVE_WORLD_STAGE_3_DESC: "The infestation of [root.target.GetName] continues"
+		TOAST_TEC_HIVE_WORLD_STAGE_4_TITLE: "Infestation Advances"
+		TOAST_TEC_HIVE_WORLD_STAGE_4_DESC: "The infestation of [root.target.GetName] advances"
+		TOAST_TEC_HIVE_WORLD_STAGE_5_TITLE: "Infestation Ending"
+		TOAST_TEC_HIVE_WORLD_STAGE_5_DESC: "The infestation of [root.target.GetName] is near total completion."
+
 	# /
 	# Biohive
 		# NOTE: Adding it here as its basically a mirror
