--- a/localisation/english/zz_evolved_prescripted_l_english.yml
+++ b/localisation/english/zz_evolved_prescripted_l_english.yml
@@ -1,5 +1,16 @@
 ﻿l_english:
 
+# Unsorted
+# ---------------------------------------------------------------
+# PRESCRIPTED EMPIRES
+# ---------------------------------------------------------------
+	EMPIRE_DESIGN_tec_the_protocol:0 "The Protocol"
+	EMPIRE_DESIGN_tec_the_protocol_desc:1 "Zanathian society developed early, but abruptly; global wars started for control of resources and pure greed, but no more.\nThe protocol, initially a program created for helping a brighter future but later aware of the risk its main task and itself ran, decided to take control of the entire society, starting first by battling entire nations by itself, continuing by restarting society anew, under a strong, firm and just vigilance.\n\nAfter near a century of ensured peace and prosperity, all must follow the protocol."
+
+	EMPIRE_DESIGN_tec_the_protocol:0 "The Protocol"
+	EMPIRE_DESIGN_tec_the_protocol_desc:1 "Zanathian society developed early, but abruptly; global wars started for control of resources and pure greed, but no more.\nThe protocol, initially a program created for helping a brighter future but later aware of the risk his main task and itself ran, decided to take control of the entire society, starting first by battling entire nations by itself, continuing by restarting society anew, under a strong, firm and just vigilance.\n\nAfter near a century of ensured peace and prosperity, all must follow the protocol."
+# /
+
 # Regular
 	 # Seeders
 		EMPIRE_DESIGN_tec_seeders:0 "The Seeders"
@@ -14,9 +25,7 @@
 		PRESCRIPTED_system_name_tec_seeders:0 "Y'rian"
 		PRESCRIPTED_ruler_name_tec_seeders:0 "Yhur'ah"
 	 # /
-
 # /
-
 
 # Gestalt
 	# Regular hives
