--- a/localisation/english/zz_evolved_traditions_l_english.yml
+++ b/localisation/english/zz_evolved_traditions_l_english.yml
@@ -61,7 +61,7 @@
 	tr_tec_outreach_4_delayed:0 "Wherever we want to be settled, will be ours and will be adapted to our needs."
 
 		tr_tec_outreach_final_1:0 "Preprinted Modules"
-		tr_tec_outreach_final_1_text:0 "New colonies start with an free §YHabitation district§!, and have §Y25%§! extra §YBuilding speed§! and §G-25%§! §YDistrict Upkeep§! during 5 years.\nEffect not available for advanced megastructures."
+		tr_tec_outreach_final_1_text:0 "New colonies start wit an free §YHabitation district§!, and have §Y25%§! extra §YBuilding Speed§! and §G-25%§! §YDistrict Upkeep§! during 5 years.\nEffect not available for advanced megastructures."
 		tr_tec_outreach_final_1_tooltip:0 "$tec_tradition_swap_warning$\n\n$tr_tec_outreach_final_1_text$"
 		tr_tec_outreach_final_1_delayed:0 "Deployable structures and habitation modules will greatly benefit our development, so each colonizer will be equipped with special modules printed before or during the travel, to ensure the faster growth of the colony."
 
