rework: trade league policy moved to t3 trade fed, trade fed is now unlocked by competitive ethic instead of ethics, machine traders can get trade fed

--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -283,3 +283,6 @@ building_archaeostudies_faculty_relic_effect:0 "If built on a §YRelic World§! 
 building_archaeostudies_faculty_relic_gpm_effect: "\nIf built on an §YAncient Archaeopolis World§!:\n Research Speed (Archaeostudies): §G+100%§!\n £minor_artifacts£ Minor Artifacts from £job_researcher£ Archaeoengineers: §G+0.5§!"
 
 ADD_NAVAL_CAPACITY_FROM_SOLDIERS:0 "Naval Capacity from Soldier Jobs: §G+1§!"
+trade_federation_passive: "Free Trade Agreements"
+trade_value_1:0 "$trade_federation$"
+trade_value_2:0 "Standardization of Measures"
