--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -24,13 +24,18 @@
 
 # AUTHORITY Replaces
 # ------------------------------------------------------------
-	AUTH_HIVE_MIND_ASCENSION_RESTRICTIONS:0 "§ERestriction:§! Cannot follow §HSynthetic Ascension Path§!; Following a §HCybernetic§! ascension path will give the option to replace this authority"
-	AUTH_HIVE_MIND_FOREIGN_POP_SURVIVAL:1 "§ERestriction:§! Non-§HHive Mind§! organic £pop£ Pops must be assimilated, enslaved, purged or §Hgenetically modified§! to obtain the hive-minded trait, if not §HEmpathic§!.\n"
-	AUTH_HIVE_MIND_GENEMODDING:0 "Can genetically modify §H£pop£ Pops§! to become §HHive Mind§! compatible if §HBiological Ascension Path§! is completed"
+	AUTH_HIVE_MIND_ASCENSION_RESTRICTIONS:0 "§RAscension Restriction:§!\n- Cannot follow §YSynthetic§! ascension path\n- Following a §YCybernetic§! ascension path will give the option to replace this authority"
+	AUTH_HIVE_MIND_FOREIGN_POP_SURVIVAL:1 "§RPop Restriction:§! Non-§YHive Mind§! organic £pop£ Pops must be assimilated, enslaved, purged or §Ygenetically modified§! to obtain the hive-minded trait, if not §YEmpathic§!.\n"
+	AUTH_HIVE_MIND_GENEMODDING:0 "Can genetically modify §Y£pop£ Pops§! to become §YHive Mind§! compatible if §YBiological Ascension Path§! is completed"
 
  # added to machine auth
-	AUTH_MACHINE_ASCENSION_RESTRICTIONS:0 "Cannot follow §HPsionic Ascension Path§!"
-	AUTH_MACHINE_PROVIDES_FREE_ASSEMBLY:0 "Capitals provide §G1§! extra monthly §HAssembly§!"
+	AUTH_MACHINE_ASCENSION_RESTRICTIONS:0 "§RAscension Restriction:§! Cannot follow §YPsionic§!, §YBiological§! or §YCybernetic§! ascension paths"
+	AUTH_MACHINE_PROVIDES_FREE_ASSEMBLY:0 "Capitals provide §G1§! extra monthly §YAssembly§!"
+	AUTH_MACHINE_INTELLIGENCE_IMMORTAL_LEADERS:0 "§HLeader Bonus:§! Leaders are §YImmortal§!"
+	AUTH_MACHINE_TECH_ADDITIONS:0 "§HTechnology Bonus:§! Has access to special §YMachine§! technologies"
+	AUTH_MACHINE_TECH_RESTRICTIONS:1 "§RTechnology Restriction:§! Cannot research §YRobot§! technologies"
+	AUTH_MACHINE_FOREIGN_POP_SURVIVAL:0 "§RPop Restriction:§! Non-§YMachine§! £pop£ Pops must be assimilated, enslaved or purged, if not §YEmpathic§!."
+	AUTH_MACHINE_NATIVE_POPS:0 "§HPop Mechanic:§! §YMachine§! £pop£ Pops do not grow but are built"
 
 # CIVICS replaces
 # ------------------------------------------------------------
@@ -286,3 +291,9 @@ ADD_NAVAL_CAPACITY_FROM_SOLDIERS:0 "Naval Capacity from Soldier Jobs: §G+1§!"
 trade_federation_passive: "Free Trade Agreements"
 trade_value_1:0 "$trade_federation$"
 trade_value_2:0 "Standardization of Measures"
+
+
+concept_hegemony_federation_desc: "$hegemony_federation_desc$\n\n§ERequirements:§!\nOne of the following:\n- $civic_tooltip_authoritarian$\n- Has §I$civic_machine_servitor$§! Civic\n- Has §I$civic_tec_hive_overminds$§! Civic"
+concept_military_federation_desc: "$military_federation_desc$\n\n§ERequirements:§!\nOne of the following:\n- $civic_tooltip_militarist$\n- Has §I$civic_hive_strength_of_legions$§! Civic\n- Has §I$civic_machine_warbots$§! Civic\n- Has §I$civic_tec_machine_warform_cluster$§! Civic"
+concept_research_federation_desc: "$research_federation_desc$\n\n§ERequirements:§!\nOne of the following:\n- $civic_tooltip_materialist$\n- Has §I$auth_machine_intelligence$§! Authority\n- Has §I$auth_tec_hive_cybernetic$§! Authority\n- Has §I$auth_tec_ai$§! Authority\n- Has §I$auth_tec_ai_corporate$§! Authority\n- Has §I$civic_hive_natural_neural_network$§! Civic"
+concept_trade_federation_desc: "$trade_federation_desc$\n\n§ERequirements:§!\nOne of the following:\n- $civic_tooltip_competitive$\n- Has §I$auth_corporate$§! Authority\n- Has §I$auth_tec_patrocorporate$§! Authority\n- Has §I$auth_tec_ai_corporate$§! Authority\n- Has §I$civic_tec_machine_traders$§! Civic"
