assembly biohive changes

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -2157,6 +2157,17 @@
 	civic_tooltip_tec_hive_cybernetic_overmind_effects:0 "TO DO"
 	# Adjutant jobs boost a central drone
 
+	civic_tec_hive_swarmlords:0 "§G£tec_civic_ruler£§!Subservient Overminds"
+	civic_tec_hive_swarmlords_desc:0 "['concept_tec_brood_capital_civic']\n\nTO DO"
+	civic_tec_hive_swarmlords_tooltip:0 "TO DO"
+	# Single mega - adaptive job
+
+	civic_tec_hive_norn_queens:0 "§G£tec_civic_ruler£§!Subservient Overminds"
+	civic_tec_hive_norn_queens_desc:0 "['concept_tec_brood_capital_civic']\n\nTO DO"
+	civic_tec_hive_norn_queens_tooltip:0 "TO DO"
+	# norn queens = extra genetic boost
+	# focus on genetics more than eusociality
+
  # /
 # /
 
