--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -291,7 +291,7 @@ l_english:
  # /
 
  # ------------------------------------------------- BioHive
-	# Capitals
+	# --------------- Capitals
 		building_tec_biohive_sapling:0 "Swarm Sapling"
 		building_tec_biohive_sapling_desc:0 "A small nascent growth of biomatter where the biomorph swarm coordinate lesser drones and colony establishment."
 
@@ -310,9 +310,250 @@ l_english:
 		building_tec_biohive_imperial_capital:0 "Swarm Imperial Cortex"
 		building_tec_biohive_imperial_capital_desc:0 "A Gargantuan organism serving as a direct manifestation of the ruling Hive Mind of the galaxy."
 	# /
-	# Anticrime
+	# --------------- Anticrime
+		building_tec_hive_bio_sentinel_post_1:0 "Soothing Spire"
+		building_tec_hive_bio_sentinel_post_1_desc:0 "TO DO."
+
+		building_tec_hive_bio_sentinel_post_2:0 "Soothing Megaspire"
+		building_tec_hive_bio_sentinel_post_2_desc:0 "TO DO."
+	# /
+	# --------------- Housing
+		building_tec_biohive_housing_1:0 "Bio Warren"
+		building_tec_biohive_housing_1_desc:0 "Large Bioconstructs whose utility is hosting and keeping the rest of drones safe while they either rest or receive the attention and care required."
+		building_tec_biohive_housing_2:0 "Bio Nest"
+		building_tec_biohive_housing_2_desc:0 "Extremely Large Bioconstructs whose utility is hosting and keeping the rest of drones safe while they either rest or receive the attention and care required."
+		building_tec_biohive_housing_3:0 "Bio Lair"
+		building_tec_biohive_housing_3_desc:0 "Gargantuan communities of Bioconstructs, resembling entire cities interconnected, whose utility is hosting and keeping the rest of drones safe while they either rest or receive the attention and care required."
+	# /
+	# --------------- Amenities
 
 	# /
+	# --------------- Amenities
+		
+	# /
+	# --------------- Menial
+	 # --------------- Menial Energy
+		building_tec_biohive_energrid_1:0 "REPLACE_ME"
+		building_tec_biohive_energrid_1_desc:0 "REPLACE_ME"
+		building_tec_biohive_energrid_2:0 "REPLACE_ME"
+		building_tec_biohive_energrid_2_desc:0 "REPLACE_ME"
+		building_tec_biohive_energrid_3:0 "REPLACE_ME"
+		building_tec_biohive_energrid_3_desc:0 "REPLACE_ME"
+
+		building_tec_biohive_energy_grid:0 "REPLACE_ME"
+		building_tec_biohive_energy_grid_desc:0 "REPLACE_ME"
+		building_tec_biohive_energy_nexus:0 "REPLACE_ME"
+		building_tec_biohive_energy_nexus_desc:0 "REPLACE_ME"
+		building_tec_biohive_energy_complex:0 "REPLACE_ME"
+		building_tec_biohive_energy_complex_desc:0 "REPLACE_ME"
+	 # /
+	 # --------------- Menial Minerals
+		building_tec_biohive_stripmine_1:0 "Excavation Tendrils"
+		building_tec_biohive_stripmine_1_desc:0 "Deep and wide do these tendrils go into mineral amalgams for obtaining rich resources and harvest necessary energy for the development of the mergaorganism that grows it."
+		building_tec_biohive_stripmine_2:0 "Drilling Tendrils"
+		building_tec_biohive_stripmine_2_desc:0 "Deep and wide do these tendrils go into mineral amalgams for obtaining rich resources and harvest necessary energy for the development of the mergaorganism that grows it."
+		building_tec_biohive_stripmine_3:0 "Ravaging Tendrils"
+		building_tec_biohive_stripmine_3_desc:0 "Deep and wide do these tendrils go deep into mineral amalgams for obtaining rich resources and harvest necessary energy for the development of the mergaorganism that grows it."
+
+		building_tec_biohive_mineral_purification_plant:0 "Geothermal Amasser"
+		building_tec_biohive_mineral_purification_plant_desc:0 "Enormous organism fed by planetary tendrils and drones with raw materials, processing raw materials and energy into useful more streamlined resources."
+		building_tec_biohive_mineral_purification_hub:0 "Geothermal Gulper"
+		building_tec_biohive_mineral_purification_hub_desc:0 "Gargantuan organism fed by planetary tendrils and drones with raw materials, processing raw materials and energy into useful more streamlined resources."
+		building_tec_biohive_mineral_purification_complex:0 "Geothermal Digestor"
+		building_tec_biohive_mineral_purification_complex_desc:0 "Titanic organism fed by planetary tendrils and drones with raw materials, processing raw materials and energy into useful more streamlined resources."
+	 # /
+	 # --------------- Menial Food 
+		building_tec_biohive_hydroponics_farm_1:0 "Biomatter Farm"
+		building_tec_biohive_hydroponics_farm_1_desc:0 "Biological matter is generated here from rich minerals and valuable energy, creating specific growths that serve as the raw matter for the rest of the biological entities and drones that conform the swarm."
+		building_tec_biohive_hydroponics_farm_2:0 "Biomatter Nest"
+		building_tec_biohive_hydroponics_farm_2_desc:0 "Biological matter is generated here from rich minerals and valuable energy, creating specific growths that serve as the raw matter for the rest of the biological entities and drones that conform the swarm."
+		building_tec_biohive_hydroponics_farm_3:0 "Biomatter Lair"
+		building_tec_biohive_hydroponics_farm_3_desc:0 "Biological matter is generated here from rich minerals and valuable energy, creating specific growths that serve as the raw matter for the rest of the biological entities and drones that conform the swarm."
+
+		building_tec_biohive_food_processing_facility:0 "Biogerminator"
+		building_tec_biohive_food_processing_facility_desc:0 "Special megaorganisms dedicated to accelerate the growth of biological matter to be harvested as usable biomatter at a small but effective scale."
+		building_tec_biohive_food_processing_3:0 "Advanced Biogerminator"
+		building_tec_biohive_food_processing_3_desc:0 "Special megaorganisms dedicated to accelerate the growth of biological matter to be harvested as usable biomatter at a regional scale."
+		building_tec_biohive_food_processing_3:0 "Planetary Germinator"
+		building_tec_biohive_food_processing_3_desc:0 "Special megaorganisms dedicated to accelerate the growth of biological matter to be harvested as usable biomatter at a whole planetary scale."
+	 # /
+	# /
+	# --------------- Research
+		building_tec_biohive_research_lab_1:0 "Neuromorph Offspring"
+		building_tec_biohive_research_lab_1_desc:0 "A."
+		building_tec_biohive_research_lab_2:0 "Mature Neuromorph"
+		building_tec_biohive_research_lab_2_desc:0 "A."
+		building_tec_biohive_research_lab_3:0 "Sentient Neuromorph"
+		building_tec_biohive_research_lab_3_desc:0 "A."
+
+		building_tec_biohive_science_1:0 "Planetary Bio-Brain"
+		building_tec_biohive_science_1_desc:0 "A."
+
+		building_tec_biohive_science_2:0 "Sentient Bio-Brain"
+		building_tec_biohive_science_2_desc:0 "A."		
+	# /
+	# --------------- Unity
+		building_tec_biohive_unity_1:0 "Unitary Dendrites"
+		building_tec_biohive_unity_1_desc:0 "A."
+		building_tec_biohive_unity_2:0 "Amplified Dendrites"
+		building_tec_biohive_unity_2_desc:0 "A."
+		building_tec_biohive_unity_3:0 "Sentient Dendrites"
+		building_tec_biohive_unity_3_desc:0 "A."
+
+		building_tec_biohive_unity_booster_1:0 "Evolution Chamber"
+		building_tec_biohive_unity_booster_1_desc:0 "A."
+		building_tec_biohive_unity_booster_2:0 "Evolution Nest"
+		building_tec_biohive_unity_booster_2_desc:0 "A."
+		building_tec_biohive_unity_booster_3:0 "Evolution Lair"
+		building_tec_biohive_unity_booster_3_desc:0 "A."		
+
+		building_tec_biohive_evolution_1:0 "Evolution Chamber"
+		building_tec_biohive_evolution_1_desc:0 "A."
+		building_tec_biohive_evolution_2:0 "Evolution Nest"
+		building_tec_biohive_evolution_2_desc:0 "A."
+		building_tec_biohive_evolution_3:0 "Evolution Lair"
+		building_tec_biohive_evolution_3_desc:0 "A."		
+	# /
+	# --------------- Industrial
+		building_tec_biohive_foundry_1:0 "Bioalloys Refiner"
+		building_tec_biohive_foundry_1_desc:0 "Specific biomorph dedicated to improve the quality and hardness of bioalloys produced via biomatter metamorphosis and calcification."
+		building_tec_biohive_foundry_2:0 "Bioalloys Purificator"
+		building_tec_biohive_foundry_2_desc:0 "Specific biomorph dedicated to improve the quality and hardness of bioalloys produced via biomatter metamorphosis and calcification in enormous quantities."
+		building_tec_biohive_foundry_3:0 "Bioalloys Amasser"
+		building_tec_biohive_foundry_3_desc:0 "Specific biomorph dedicated to improve the quality and hardness of bioalloys produced via biomatter metamorphosis and calcification in unfathomable quantities."
+	# /
+	# --------------- Naval
+		building_tec_biohive_fortress_1:0 "Drone Stronghold"
+		building_tec_biohive_fortress_1_desc:0 "Calcified layers of biomatter conforms a truly respectable point of defense in this planet, reinforcing the planetary integrity and safety."
+		building_tec_biohive_fortress_2:0 "Drone Fortress"
+		building_tec_biohive_fortress_2_desc:0 "Calcified layers of biomatter conforms a truly respectable point of defense in this planet, reinforcing the planetary integrity and safety and emitting disarray signals to disarray enemy fleets."
+		building_tec_biohive_fortress_3:0 "Drone Bastion"
+		building_tec_biohive_fortress_3_desc:0 "Calcified layers of biomatter conforms diverse respectable points of defense in this planet, reinforcing the planetary integrity and safety and emitting disarray signals to disarray enemy fleets."
+		
+		building_tec_naval_biohive_1:0 "Naval Transmitter"
+		building_tec_naval_biohive_1_desc:0 "Coordinated with the rest of neural web of this planet, this organism emits and receives a pseudo-psionic signal to increase the control over larger naval bioforms, using the smaller swarm bioforms as resonators."
+		building_tec_naval_biohive_2:0 "Naval Transducer"
+		building_tec_naval_biohive_2_desc:0 "Coordinated with the rest of neural web of this planet, this organism emits and receives a pseudo-psionic signal to increase the control over larger naval bioforms, using the smaller swarm bioforms as resonators, over entire systems."
+		building_tec_naval_biohive_3:0 "Naval Relay"
+		building_tec_naval_biohive_3_desc:0 "Coordinated with the rest of neural web of this planet, this organism emits and receives a pseudo-psionic signal to increase the control over larger naval bioforms, using the smaller swarm bioforms as resonators."
+	# /
+	# --------------- Jobs
+		job_tec_podtender_drone:0 "Podtender Drone"
+		job_tec_podtender_drone_plural:0 "Podtender Drones"
+		job_tec_podtender_drone_desc:0 "One of the lowest parts of the drone chain, yet one of the most important ones, these drones care and ensure the growth of lesser drones while also maintain and care already grown ones ceaselessly."
+		job_tec_podtender_drone_effect_desc:0 "£job_tec_podtender_drone£ $job_tec_podtender_drone_plural$ generates "
+		mod_job_tec_podtender_drone_add:0 "$job_tec_podtender_drone$ Jobs"
+
+		job_tec_biomatter_drone:0 "Biomatter Drone"
+		job_tec_biomatter_drone_plural:0 "Biomatter Drone"
+		job_tec_biomatter_drone_desc:0 "Specifically designed drones that pollinate terrain with rich material to later harvest grown biomatter, later recycled into usable tissues and resources for the biomorph swarm."
+		job_tec_biomatter_drone_effect_desc:0 "£job_tec_biomatter_drone£ $job_tec_biomatter_drone_plural$ generates "
+		mod_job_tec_biomatter_drone_add:0 "$job_tec_biomatter_drone$ Jobs"
+
+		job_tec_germinator_drone:0 "Germinator Drone"
+		job_tec_germinator_drone_plural:0 "Germinator Drone"
+		job_tec_germinator_drone_desc:0 "Specifically designed drones that pollinate terrain with rich material to enhance the rate of growth of natural biomatter."
+		job_tec_germinator_drone_effect_desc:0 "£job_tec_germinator_drone£ $job_tec_germinator_drone_plural$ generates "
+		mod_job_tec_germinator_drone_add:0 "$job_tec_germinator_drone$ Jobs"
+
+		job_tec_neural_drone:0 "Neural Drone"
+		job_tec_neural_drone_plural:0 "Neural Drones"
+		job_tec_neural_drone_desc:0 "Acting as independent neurons, these drones focus on the storage, transformation and addition of useful information, in order to boost the collective advancements."
+		job_tec_neural_drone_effect_desc:0 "£job_tec_neural_drone£ $job_tec_neural_drone_plural$ generates "
+		mod_job_tec_neural_drone_add:0 "$job_tec_neural_drone$ Jobs"
+
+		job_tec_biofoundry_drone:0 "Biofoundry Drone"
+		job_tec_biofoundry_drone_plural:0 "Biofoundry Drones"
+		job_tec_biofoundry_drone_desc:0 "Advanced drones with the only purpose of selecting and generating the best alloy-polimeric like biomatter for later usage for larger organisms and constructs."
+		job_tec_biofoundry_drone_effect_desc:0 "£job_tec_biofoundry_drone£ $job_tec_biofoundry_drone_plural$ generates "
+		mod_job_tec_biofoundry_drone_add:0 "$job_tec_biofoundry_drone$ Jobs"
+
+		job_tec_swarm_drone:0 "Swarm Drone"
+		job_tec_swarm_drone_plural:0 "Swarm Drones"
+		job_tec_swarm_drone_desc:0 "Strong and active drones that preserve the integrity of the swarm, battling corrupted bioconstruct and eliminating any intruder."
+		job_tec_swarm_drone_effect_desc:0 "£job_tec_swarm_drone£ $job_tec_swarm_drone_plural$ generates "
+		mod_job_tec_swarm_drone_add:0 "$job_tec_swarm_drone$ Jobs"
+
+		job_tec_bioresource_drone:0 "Biomorph Drone"
+		job_tec_bioresource_drone_plural:0 "Biomorph Drones"
+		job_tec_bioresource_drone_desc:0 "These drones have the sole purpose of becoming one with the planet biomorph entity, used as resource for other organic structuresa and constructions."
+		job_tec_bioresource_drone_effect_desc:0 "£job_tec_bioresource_drone£ $job_tec_bioresource_drone_plural$ generates "
+		mod_job_tec_bioresource_drone_add:0 "$job_tec_bioresource_drone$ Jobs"
+
+		# Ego-Organism - Fast drones into buildings
+		job_tec_reservoir_drone:0 "Reservoir Drone"
+		job_tec_reservoir_drone_plural:0 "Reservoir Drones"
+		job_tec_reservoir_drone_desc:0 "A"
+		job_tec_reservoir_drone_effect_desc:0 "£job_tec_reservoir_drone£ $job_tec_reservoir_drone_plural$ generates "
+		mod_job_tec_reservoir_drone_add:0 "$job_tec_reservoir_drone$ Jobs"
+
+		# Unity normal building
+		building_tec_biohive_node:0 "Dendrite Node"
+		building_tec_biohive_node_desc:0 "TO_DO_WIP"
+		building_tec_biohive_cluster:0 "Dendrite Cluster"
+		building_tec_biohive_cluster_desc:0 "TO_DO_WIP"
+		building_tec_biohive_confluence:0 "Dendrite Amalgam"
+		building_tec_biohive_confluence_desc:0 "TO_DO_WIP"
+		# Unity booster
+		building_tec_biohive_relay_1:0 "Evolution Den"
+		building_tec_biohive_relay_1_desc:0 "TO_DO_WIP"
+		building_tec_biohive_relay_2:0 "Evolution Chamber"
+		building_tec_biohive_relay_2_desc:0 "TO_DO_WIP"
+		building_tec_biohive_relay_3:0 "Evolution Lair"
+		building_tec_biohive_relay_3_desc:0 "TO_DO_WIP"
+
+		job_tec_bioevolution_drone:0 "Evolutionary Drone"
+		job_tec_bioevolution_drone_plural:0 "Evolutionary Drones"
+		job_tec_bioevolution_drone_desc:0 "Strand of genetic data after strand of genetic data, these drones are deeply focused on finding the perfect and most stable and specialized variants of drones suitable for the needs of the collective, and preserve the gestalt memory and unity deeply engraved in each one of them."
+		job_tec_bioevolution_drone_effect_desc:0 "£job_tec_bioevolution_drone£ $job_tec_bioevolution_drone_plural$ turn §Y$tec_loc_energy$§! into §Y$tec_loc_unity$§!$tec_bioevolution_drone_cleanup$ and §Y$tec_loc_amenities_gestalt$§!."
+		job_tec_bioevolution_drone_effect_desc_civic:0 "£job_tec_bioevolution_drone£ $job_tec_bioevolution_drone_plural$ turn §Y$tec_loc_energy$§! into §Y$tec_loc_unity$§!, bonuses based on the gestalt §YMotivations§! and §Y$tec_loc_amenities_gestalt$§!."
+		mod_job_tec_bioevolution_drone_add:0 "$job_tec_bioevolution_drone$ Jobs"
+		mod_job_tec_bioevolution_drone_per_pop:0 "§G+1§! $job_tec_bioevolution_drone$ Job per $VALUE$ Pops"
+		mod_job_tec_bioevolution_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_bioevolution_drone_add£ per $VALUE$ £pop£"
+
+		# Spawning pool
+		building_tec_biohive_spawning_pool_1:0 "Spawning Pool"
+		building_tec_biohive_spawning_pool_1_desc:0 "TO_DO_WIP"
+		building_tec_biohive_spawning_pool_2:0 "Hatchery Pool"
+		building_tec_biohive_spawning_pool_2_desc:0 "TO_DO_WIP"
+		building_tec_biohive_spawning_pool_3:0 "Incubation Pool"
+		building_tec_biohive_spawning_pool_3_desc:0 "TO_DO_WIP"
+
+		job_tec_biospawning_drone:0 "Podtender Drone"
+		job_tec_biospawning_drone_plural:0 "Podtender Drones"
+		job_tec_biospawning_drone_desc:0 "These drones devote themselves to ensure the correct growth and caring the newest or youngest members of the collective."
+		job_tec_biospawning_drone_effect_desc:0 "£job_tec_biospawning_drone£ $job_tec_biospawning_drone_plural$ assemble new drone £pop£ §YPops§! with §Y$tec_loc_food$§! or §Y$tec_loc_minerals$§!."
+		mod_job_tec_biospawning_drone_add:0 "$job_tec_biospawning_drone$ Jobs"
+		mod_job_tec_biospawning_drone_per_pop:0 "§G+1§! $job_tec_biospawning_drone$ Job per $VALUE$ Pops"
+		mod_job_tec_biospawning_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_biospawning_drone_add£ per $VALUE$ £pop£"
+		# Biomass buildings
+
+		job_tec_biomass_drone:0 "Podtender Drone"
+		job_tec_biomass_drone_plural:0 "Podtender Drones"
+		job_tec_biomass_drone_desc:0 "These drones devote themselves to ensure the correct growth and caring the newest or youngest members of the collective."
+		job_tec_biomass_drone_effect_desc:0 "£job_tec_biomass_drone£ $job_tec_biomass_drone_plural$ assemble new drone £pop£ §YPops§! with §Y$tec_loc_food$§! or §Y$tec_loc_minerals$§!."
+		mod_job_tec_biomass_drone_add:0 "$job_tec_biomass_drone$ Jobs"
+		mod_job_tec_biomass_drone_per_pop:0 "§G+1§! $job_tec_biomass_drone$ Job per $VALUE$ Pops"
+		mod_job_tec_biomass_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_biomass_drone_add£ per $VALUE$ £pop£"
+
+		# branch office
+		D_building_tec_biohivecorp_growth:0 "Evergrowing Germinator"
+		D_building_tec_biohivecorp_growth_desc:0 "This specially designed biological creation alters life at a microscopic level, boosting and amplifying without aggresion any lifeform, enhancing the natural fertility and growth capacities."
+
+		# amenities
+		D_building_tec_hivecorp_amenities:0 "symbiotic Symbionts"
+		D_building_tec_hivecorp_amenities_desc:0 "A conglomerate of nests of specially breed drones designed to exclusively maintain and procure goods to the population of the planet where it as grown."
+
+
+		# research
+		D_building_tec_hivecorp_research:0 "Mycelic Neuroconnectors"
+		D_building_tec_hivecorp_research_desc:0 "These special nodes organically transmits part of the stored collective knowledge to the planet, and vice versa."
+		# unity
+		D_building_tec_hivecorp_unity:0 "Syncronic Neural Tissue"
+		D_building_tec_hivecorp_unity_desc:0 "These treads of neural tissue enable a direct communication with the Hive Mind for sharing experiences, deveolpment and thoughts with the ruling class."
+		# alloys
+		D_building_tec_hivecorp_alloys:0 "Organic Bioforges"
+		D_building_tec_hivecorp_alloys_desc:0 "Using great amounts of biological matter, these forges allows the fast crafting of rich alloys in order to be used by the planet inhabitants."
  # /
 
  # ------------------------------------------------- MechHive
